# dyson

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  docker-compose.yml
crates/dyson/: Cargo.toml  build.rs
crates/dyson-ast/: Cargo.toml
crates/dyson-ast/src/: languages.rs  nodes.rs
crates/dyson-ast/src/taint/: index.rs  trace.rs  types.rs
crates/dyson-core/: Cargo.toml
crates/dyson-core/src/: error.rs  lib.rs  message.rs
crates/dyson-dependency-analysis/: Cargo.toml
crates/dyson-dependency-analysis/src/: lib.rs  osv.rs
crates/dyson-dependency-analysis/src/parser/: cargo.rs  conan.rs  cran.rs  github_actions.rs  go.rs  hackage.rs  hex.rs  maven.rs  mod.rs  npm.rs  nuget.rs  packagist.rs  pub_.rs  pypi.rs  rubygems.rs  sbom.rs  swift.rs
crates/dyson-harness/: Cargo.toml
crates/dyson-harness/src/: call.rs  contracts.rs  lib.rs  protocol.rs  scheduler.rs
crates/dyson-mesh/: Cargo.toml
crates/dyson-mesh/src/: addr.rs  envelope.rs  error.rs  identity.rs  inproc.rs  lib.rs  mailbox.rs  mesh.rs
crates/dyson-persistence/: Cargo.toml
crates/dyson-persistence/src/: coalesce.rs  disk.rs  lib.rs  migrate.rs
crates/dyson-swarm-protocol/: Cargo.toml
crates/dyson-swarm-protocol/src/: error.rs  lib.rs  types.rs  verify.rs
crates/dyson/examples/: expensive_live_security_review.rs  security_engineer_benchmark_score.rs  security_engineer_stage_smoke.rs  smoke_ast_describe.rs  smoke_ast_query.rs  smoke_taint_trace.rs
crates/dyson/src/: error.rs  feedback.rs  http.rs  lib.rs  main.rs  message.rs  message_cost_backfill.rs  swarm_cost.rs  swarm_state_sync.rs  tokens.rs  util.rs
crates/dyson/src/advisor/: generic.rs  mod.rs
crates/dyson/src/agent/: budget.rs  compaction.rs  dependency_analyzer.rs  dream.rs  execution.rs  loop.rs  mod.rs  persistence.rs  protocol.rs  rate_limiter.rs  reflection.rs  result_formatter.rs  retry.rs  silent_output.rs  sliding_window.rs  state.rs  stream_handler.rs  tests.rs  token_budget.rs
crates/dyson/src/ast/: languages.rs  mod.rs  nodes.rs
crates/dyson/src/ast/taint/: index.rs  mod.rs  trace.rs  types.rs
crates/dyson/src/auth/: api_key.rs  bearer.rs  composite.rs  credential.rs  deferred_bearer.rs  hashed_bearer.rs  mod.rs  no_auth.rs  oauth.rs  oidc.rs  static_headers.rs
crates/dyson/src/chat_history/: coalesce.rs  disk.rs  migrate.rs  mod.rs
crates/dyson/src/command/: cost_backfill.rs  hash_bearer.rs  init.rs  listen.rs  mod.rs  run.rs  swarm.rs  warden.rs
crates/dyson/src/config/: hot_reload.rs  loader.rs  migrate.rs  mod.rs
crates/dyson/src/controller/: activity.rs  background.rs  log_output.rs  mod.rs  recording.rs  slash.rs  swarm.rs  terminal.rs
crates/dyson/src/controller/http/: artefact_access.rs  assets.rs  config.rs  mod.rs  output.rs  responses.rs  state.rs  stores.rs  subagent_events.rs  test_helpers.rs  wire.rs
crates/dyson/src/controller/http/routes/: activity.rs  admin.rs  agent.rs  artefacts.rs  (+16 more)
crates/dyson/src/controller/telegram/: api.rs  feedback.rs  formatting.rs  mod.rs  output.rs  types.rs
crates/dyson/src/dependency_analysis/: detect.rs  mod.rs  osv.rs  types.rs
crates/dyson/src/dependency_analysis/parser/: cargo.rs  conan.rs  cran.rs  github_actions.rs  go.rs  hackage.rs  hex.rs  maven.rs  mod.rs  npm.rs  nuget.rs  packagist.rs  pub_.rs  pypi.rs  rubygems.rs  sbom.rs  swift.rs
crates/dyson/src/export/: mod.rs  sharegpt.rs
crates/dyson/src/llm/: anthropic.rs  claude_code.rs  cli_subprocess.rs  codex.rs  gemini.rs  gemini_stub.rs  mod.rs  ollama_cloud.rs  openai.rs  openai_compat.rs  pricing.rs  registry.rs  sse_parser.rs  stream.rs
crates/dyson/src/llm/dialects/: deepseek.rs  gemma.rs  mod.rs  qwen.rs
crates/dyson/src/media/: audio.rs  mod.rs  office.rs  pdf.rs
crates/dyson/src/sandbox/: mod.rs  no_sandbox.rs  os.rs  policy.rs  policy_sandbox.rs
crates/dyson/src/secret/: insecure_env.rs  mod.rs
crates/dyson/src/skill/: builtin.rs  mod.rs
crates/dyson/src/skill/local/: manifest.rs  mod.rs  script.rs  tests.rs
crates/dyson/src/skill/mcp/: elicitation.rs  mod.rs  protocol.rs  router.rs  transport.rs
crates/dyson/src/skill/subagent/: coder.rs  mod.rs  orchestrator.rs  pentest_agent.rs  pentester.rs  repo_detect.rs  security_engineer.rs  security_engineer_check.rs  tests.rs
crates/dyson/src/swarm/: connection.rs  mod.rs  probe.rs
crates/dyson/src/tool/: agent_secrets.rs  artefacts.rs  ast_edit.rs  bash.rs  bulk_edit.rs  dependency_scan.rs  edit_file.rs  export_conversation.rs  image_generate.rs  kb_search.rs  kb_status.rs  list_files.rs  load_skill.rs  memory_search.rs  mod.rs  read_file.rs  search_files.rs  send_file.rs  skill_marketplace.rs  swarm_checkpoint.rs  view.rs  web_fetch.rs  web_search.rs  workspace.rs  workspace_search.rs  workspace_update.rs  write_file.rs
crates/dyson/src/tool/ast/: languages.rs  mod.rs  nodes.rs
crates/dyson/src/tool/ast_edit/: definitions.rs  languages.rs  mod.rs  rename.rs
crates/dyson/src/tool/bulk_edit/: ast.rs  definitions.rs  find_replace.rs  languages.rs  mod.rs  rename.rs
crates/dyson/src/tool/security/: ast_describe.rs  ast_query.rs  attack_surface_analyzer.rs  exploit_builder.rs  mod.rs  taint_trace.rs
crates/dyson/src/tool/skill_create/: mod.rs  tests.rs
crates/dyson/src/workspace/: channel.rs  filesystem.rs  in_memory.rs  memory_store.rs  migrate.rs  mod.rs  openclaw.rs
crates/dyson/tests/: agent_eval.rs  ast_taint_patterns.rs  crate_boundaries.rs  http_controller.rs  mcp_live.rs  security_regression.rs  subagent_eval.rs
crates/swarm/: Cargo.toml
crates/swarm/src/: auth.rs  blob.rs  config.rs  idempotency.rs  identity.rs  key.rs  lib.rs  main.rs  queue.rs  registry.rs  router.rs  tasks.rs  tls.rs
crates/swarm/src/http/: blob.rs  checkpoint.rs  events.rs  heartbeat.rs  mcp.rs  mod.rs  progress.rs  register.rs  result.rs
crates/swarm/src/notifier/: mod.rs  template.rs
crates/swarm/src/registry/: mod.rs  persistence.rs
crates/swarm/src/scheduler/: mod.rs  store.rs  types.rs
crates/swarm/src/tasks/: mod.rs  persistence.rs
crates/swarm/tests/: http_integration.rs
(+429 files in other folders)
