[workspace]
resolver = "2"
members = [
    "crates/dyson",
    "crates/dyson-ast",
    "crates/dyson-core",
    "crates/dyson-dependency-analysis",
    "crates/dyson-harness",
    "crates/dyson-persistence",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ring = "0.17"
sha2 = "0.10"
thiserror = "2"
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
ignore = "0.4"
rand = "0.10"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "query", "rustls-no-provider"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
tree-sitter = "0.26"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
