[package]
name = "dyson-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language parsing, structural navigation, and taint primitives for Dyson"

[dependencies]
dyson-core = { path = "../dyson-core" }
ignore.workspace = true
thiserror.workspace = true
tokio.workspace = true
tree-sitter.workspace = true
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23.1"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-swift = "0.7"
tree-sitter-zig = "1.1.2"
tree-sitter-elixir = "0.3.5"
tree-sitter-erlang = "0.19"
tree-sitter-ocaml = "0.25"
tree-sitter-haskell = "0.23.1"
tree-sitter-nix = "0.3.0"
tree-sitter-json = "0.24.8"

[dev-dependencies]
tempfile = "3"
