[package]
name = "dyson-dependency-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dependency manifest discovery, parsing, and OSV analysis for Dyson"

[dependencies]
dyson-core = { path = "../dyson-core" }
futures-util.workspace = true
ignore.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng = "0.10"
thiserror.workspace = true
tokio.workspace = true
toml = { version = "1", default-features = false, features = ["parse", "serde"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
