[package]
name = "dyson-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic execution, scheduling, replay, and evaluation contracts for Dyson agents"

[dependencies]
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
