[package]
name = "dyson-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Durable conversation and execution-journal persistence for Dyson"

[dependencies]
dyson-common = { git = "ssh://git@github.com/JonCooperWorks/dyson-common.git", tag = "v0.1.7" }
dyson-core = { path = "../dyson-core" }
dyson-harness = { path = "../dyson-harness" }
serde_json.workspace = true
tokio.workspace = true
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
