[package]
name = "dyson-swarm-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire protocol types and signature verification for the Dyson swarm"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
