[package]
name = "dyson"
version = "0.1.0"
edition = "2024"
description = "Streaming, composable AI agent loop in Rust"

[dependencies]
dyson-swarm-protocol = { path = "../dyson-swarm-protocol" }

# Shared across workspace crates — inherit from [workspace.dependencies]
# so version bumps live in one place and cargo always dedupes.
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

# Runtime + HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "signal", "process", "sync", "time"] }
reqwest = { version = "0.13.2", default-features = false, features = ["stream", "json", "multipart", "form", "query", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# CLI + logging
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async utilities
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = "0.7"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

# Content + storage
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
glob = "0.3"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
nanohtml2text = "0.1"
pdf-extract = "0.10"

# AST-aware editing — all 11 grammars ship by default.
# Tokens cost more than megabytes.
tree-sitter            = "0.24"
tree-sitter-rust       = "0.23"
tree-sitter-python     = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go         = "0.23"
tree-sitter-json       = "0.24"
tree-sitter-c          = "0.23"
tree-sitter-cpp        = "0.23"
tree-sitter-java       = "0.23"
tree-sitter-ruby       = "0.23"
tree-sitter-bash       = "0.23"

# Crypto + misc
rand = "0.10"
subtle = "2"
zeroize = "1"
libc = "0.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
tempfile = "3"
proptest = "1"
