[package]
name = "dyson"
version = "0.1.0"
edition = "2024"
description = "Streaming, composable AI agent loop in Rust"

[dependencies]
dyson-swarm-protocol = { path = "../dyson-swarm-protocol" }

# Shared across workspace crates — inherit from [workspace.dependencies]
# so version bumps live in one place and cargo always dedupes.
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

# Runtime + HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "signal", "process", "sync", "time"] }
reqwest = { version = "0.13.2", default-features = false, features = ["stream", "json", "multipart", "form", "query", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# CLI + logging
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async utilities
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = "0.7"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

# Content + storage
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
glob = "0.3"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
nanohtml2text = "0.1"

# Dependency manifest parsing — used by `dependency_analysis` module for
# OSV-backed dependency review.  TOML covers Cargo.lock, poetry.lock,
# uv.lock, pyproject.toml; YAML covers pnpm-lock.yaml, pubspec.lock,
# stack.yaml.lock, and GitHub Actions workflows.
toml = { version = "0.8", default-features = false, features = ["parse"] }
serde_yaml_ng = "0.10"

# AST-aware editing — 20 grammars for 19 languages, statically linked.
tree-sitter = "0.24.7"
streaming-iterator = "0.1"
tree-sitter-rust = "0.23.3"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-ruby = "0.23.1"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-swift = "=0.6.0"
tree-sitter-zig = "1.1.2"
tree-sitter-elixir = "0.3.5"
tree-sitter-erlang = "0.15.0"
tree-sitter-ocaml = "0.24.2"
tree-sitter-haskell = "0.23.1"
tree-sitter-nix = "0.3.0"
tree-sitter-json = "0.24.8"

# Crypto + misc
rand = "0.10"
subtle = "2"
zeroize = "1"
libc = "0.2"
undoc = "0.1.19"
unpdf = { version = "0.4.5", default-features = false, features = ["fast-parse"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
tempfile = "3"
proptest = "1"
wiremock = "0.6"
