[package]
name = "dyson"
version = "0.1.0"
edition = "2024"
description = "Streaming, composable AI agent loop in Rust"
build = "build.rs"

[dependencies]
# Shared across workspace crates — inherit from [workspace.dependencies]
# so version bumps live in one place and cargo always dedupes.
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

# Runtime + HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "signal", "process", "sync", "time"] }
reqwest = { version = "0.13.2", default-features = false, features = ["stream", "json", "multipart", "form", "query", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
# TLS termination + automatic Let's Encrypt issuance for non-loopback
# HTTP controller binds.  rustls-acme drives the ACME (RFC 8555) flow
# end-to-end on top of rustls — same crypto stack the rest of the
# binary already uses, so no new TLS runtime is added.  tokio-rustls
# is the async TLS wrapper rustls-acme expects on the accept loop.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-acme = { version = "0.12", features = ["tokio", "ring"], default-features = false }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# CLI + logging
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async utilities
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = "0.7"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
# Gzip the static frontend bundle + API JSON responses when the client's
# Accept-Encoding asks for it.  Pure-Rust miniz_oxide backend — no C dep,
# ~60 KiB of source, fast enough that we encode per-request without a
# measurable cost on the 50–250 KiB blobs the web UI ships.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# Content + storage
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
glob = "0.3"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
nanohtml2text = "0.1"

# Dependency manifest parsing — used by `dependency_analysis` module for
# OSV-backed dependency review.  TOML covers Cargo.lock, poetry.lock,
# uv.lock, pyproject.toml; YAML covers pnpm-lock.yaml, pubspec.lock,
# stack.yaml.lock, and GitHub Actions workflows.
toml = { version = "0.8", default-features = false, features = ["parse"] }
serde_yaml_ng = "0.10"

# AST-aware editing — 20 grammars for 19 languages, statically linked.
tree-sitter = "0.26"
streaming-iterator = "0.1"
tree-sitter-rust = "0.23.3"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23.1"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-swift = "=0.6.0"
tree-sitter-zig = "1.1.2"
tree-sitter-elixir = "0.3.5"
tree-sitter-erlang = "0.15.0"
tree-sitter-ocaml = "0.24.2"
tree-sitter-haskell = "0.23.1"
tree-sitter-nix = "0.3.0"
tree-sitter-json = "0.24.8"

# Crypto + misc
rand = "0.10"
subtle = "2"
zeroize = "1"
# Argon2id password hashing for the HTTP controller's bearer-auth config.
# We never store a plaintext bearer token at rest — operators put a PHC
# hash (`$argon2id$...`) in dyson.json and the controller verifies the
# incoming token against it.  Stays small (~70 KiB compiled) and pure-Rust.
# `std + password-hash + rand` enables the OsRng salt source the `hash-bearer`
# subcommand uses to mint per-token salts; verification only would need fewer.
argon2 = "0.5"
# JWT verification for the HTTP controller's OIDC auth mode.  Pure-Rust
# (rust_crypto backend: rsa + p256/p384 + hmac + sha2 — no new C deps).
# We only ever verify tokens — the dyson process is the relying party,
# never the issuer — so the surface stays narrow.  v10 closed
# GHSA-h395-gr6q-cpjc (claim type-confusion that bypassed exp/nbf
# checks) and split the crypto backend out as an explicit feature, so
# we pin >= 10.3 and select rust_crypto rather than aws_lc_rs (latter
# would pull in BoringSSL, defeating the pure-Rust posture).
#
# `rust_crypto` pulls in `rsa@0.9.x`, which carries RUSTSEC-2023-0071
# (Marvin Attack — timing side-channel in *decryption*).  We never
# decrypt; verification is unaffected.  Documented and ignored in
# `.cargo/audit.toml`; revisit when jsonwebtoken upgrades past the
# fixed `rsa` version.
jsonwebtoken = { version = "10.3", default-features = false, features = ["use_pem", "rust_crypto"] }
libc = "0.2"
undoc = "0.2.0"
unpdf = { version = "0.4.5", default-features = false, features = ["fast-parse"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
tempfile = "3"
proptest = "1"
wiremock = "0.6"
