[package]
name = "swarm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The Dyson swarm hub — a task routing server for Dyson nodes"

[[bin]]
name = "swarm"
path = "src/main.rs"

[[bin]]
name = "swarm-keygen"
path = "src/bin/keygen.rs"

[lib]
name = "swarm"
path = "src/lib.rs"

[dependencies]
dyson-swarm-protocol = { path = "../dyson-swarm-protocol" }

# Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "signal", "sync", "time"] }

# HTTP server
axum = { version = "0.7", features = ["json", "macros"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful", "http1", "http2"] }
tower-http = { version = "0.6", features = ["trace"] }
tower-service = "0.3"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
rustls-acme = "0.12"

# Shared with protocol crate
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

# Auth
argon2 = "0.5"

# Persistence
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
async-trait = "0.1"

# Utilities
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
